--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Launched December 2021, The Good Dog Club LLC or TGDC is a community-based project or collection of 3D Guide Dogs in NFT form. Released with Metaverse and real-world utility planned in the near future and have attracted a variety of interest from around the globe. Our goal is to bring a 3D version of your dog breed into the metaverse. Good Dog Club LLC is a fun social project in which NFT holders may breed virtual dogs for fun and collect tokens that can be redeemed for Gifts, Discounts, Rebates, and transferred on the Blockchain."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
