--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Launched December 2021, The Good Dog Club LLC or TGDC is a community-based project or collection of 3D Guide Dogs in NFT form. Released with Metaverse and real-world utility planned in the near future and have attracted a variety of interest from around the globe. Our goal is to bring a 3D version of your dog breed into the metaverse. Good Dog Club LLC is a fun social project in which NFT holders may breed virtual dogs for fun and collect tokens that can be redeemed for Gifts, Discounts, Rebates, and transferred on the Blockchain."
     />
+    <meta name="facebook-domain-verification" content="d61iflntif4ql59yqjssthieb9rpsk" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +26,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>TheGoodDogClub</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-223980468-1">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-223980468-1');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
